2008-02-20  Peter Bloomfield

	* libbalsa/mailbox.c: (libbalsa_mailbox_index_set_flags): check
	msg-tree != NULL;
	(libbalsa_mailbox_msgno_removed): check seqno only if msg-tree
	!= NULL;
	(libbalsa_mailbox_open, libbalsa_mailbox_set_msg_tree): create
	mindex, if necessary, when creating msg-tree, instead of when
	opening.

2008-02-18  Peter Bloomfield

	* libbalsa/mailbox.c: take more care in public methods, less in
	private methods.

2008-02-15  Peter Bloomfield

	* libbalsa/mailbox.c: use a single array of structures instead
	of two pointer arrays.
	* libbalsa/mailbox.h: ditto.
	* libbalsa/mailbox_local.c: (message_match_real): api change.

2008-02-14  Peter Bloomfield

	* src/main-window.c: block the correct signal handler.

2008-01-29  Peter Bloomfield

	* libbalsa/mailbox.c:
	(libbalsa_mailbox_n_nodes): traverse nodes instead of msg_tree;
	(libbalsa_mailbox_msgno_removed): ditto.
	(libbalsa_mailbox_search_iter_step): fix corner case.
	(lbm_node_info_new, lbm_node_info_free,
	libbalsa_mailbox_get_msgno, libbalsa_mailbox_get_parent,
	lbm_node_init_children, lbm_nodes_traverse,
	libbalsa_mailbox_traverse,
	libbalsa_mailbox_msgno_inserted, lbm_msgno_filt_in,
	libbalsa_mailbox_set_msg_tree): clean up.

2008-01-28  Peter Bloomfield

	* libbalsa/mailbox.c: (libbalsa_mailbox_n_nodes): test for
	msg_tree == NULL.
	* src/balsa-mblist.c: (balsa_mblist_set_status_bar): don't test
	msg_tree; don't decrement count.

2008-01-28  Peter Bloomfield

	* libbalsa/mailbox.c: (libbalsa_mailbox_open,
	libbalsa_mailbox_close): clear mailbox->nodes;
	(lbm_node_new): new, creates info structure;
	(libbalsa_mailbox_msgno_inserted,
	lbm_msgno_filt_in, libbalsa_mailbox_msgno_removed): use
	lbm_node_new();
	(decrease_post): maintain mailbox->nodes when renumbering.

2008-01-27  Peter Bloomfield

	* configure.in: revert adding "-pg".

2008-01-27  Peter Bloomfield

	* libbalsa/mailbox.c: LibBalsaMailbox::nodes is a GPtrArray
	mapping msgno into LibBalsaMailbox::msg_tree; reimplement